cli/tests/snapshots/cli__check_doctest_continuation_no_space.snap
---
source: cli/tests/cli.rs
assertion_line: 272
expression: "format!(\"STDOUT\\n{out}STDERR\\n{err}\")"
---
STDOUT
STDERR
error[doctest-malformed-prompt]: Doctest continuation must be followed by a single space: change `...x` to `... x`
 --> doctest_continuation_no_space.py:4:1
  |
2 |     """
3 |     >>> y = (
4 |     ...x
  | ^^^^^^^^
5 |     ... )
6 |     """
  |

error[invalid-syntax]: in doctest of f: unexpected EOF while parsing
 --> doctest_continuation_no_space.py:3:14
  |
1 | def f(x: int) -> int:
2 |     """
3 |     >>> y = (
  |              ^
4 |     ...x
5 |     ... )
  |

Found 2 errors.
