cli/tests/snapshots/cli__check_doctest_syntax_error.snap
---
source: cli/tests/cli.rs
assertion_line: 248
expression: "format!(\"STDOUT\\n{out}STDERR\\n{err}\")"
---
STDOUT
STDERR
error[invalid-syntax]: in doctest of f: unexpected EOF while parsing
 --> doctest_syntax_error.py:3:10
  |
1 | def f(x: int) -> int:
2 |     """
3 |     >>> (
  |          ^
4 |     """
5 |     return x
  |

Found 1 error.
