cli/tests/snapshots/cli__run_files@err_missing_args_annotation.py.snap
---
source: tests/cli.rs
assertion_line: 45
expression: "format!(\"STDOUT\\n{out}STDERR\\n{err}\")"
input_file: tests/inputs/err_missing_args_annotation.py
---
STDOUT
STDERR
error[missing-parameter-annotation]: Parameter `*args` is missing a type annotation
 --> err_missing_args_annotation.py:1:7
  |
1 | def f(*args) -> None:
  |       ^^^^^
2 |     print(args)
  |

Found 1 error.
