cli/tests/snapshots/cli__run_files@err_missing_class_attr.py.snap
---
source: tests/cli.rs
assertion_line: 45
expression: "format!(\"STDOUT\\n{out}STDERR\\n{err}\")"
input_file: tests/inputs/err_missing_class_attr.py
---
STDOUT
STDERR
error[missing-attribute-annotation]: Class attribute `x` is missing a type annotation
 --> err_missing_class_attr.py:2:5
  |
1 | class Point:
2 |     x = 0
  |     ^
3 |     y = 0
  |

error[missing-attribute-annotation]: Class attribute `y` is missing a type annotation
 --> err_missing_class_attr.py:3:5
  |
1 | class Point:
2 |     x = 0
3 |     y = 0
  |     ^
  |

Found 2 errors.
