cli/tests/snapshots/cli__run_files@err_missing_kwargs_annotation.py.snap
---
source: tests/cli.rs
assertion_line: 45
expression: "format!(\"STDOUT\\n{out}STDERR\\n{err}\")"
input_file: tests/inputs/err_missing_kwargs_annotation.py
---
STDOUT
STDERR
error[missing-parameter-annotation]: Parameter `**kwargs` is missing a type annotation
 --> err_missing_kwargs_annotation.py:1:7
  |
1 | def f(**kwargs) -> None:
  |       ^^^^^^^^
2 |     print(kwargs)
  |

Found 1 error.
